completed the backend developement for emi
